feat: UI with links

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,5 @@
     "python.linting.pylintEnabled": true,
     "python.linting.enabled": true,
     "editor.fontSize": 18,
-    "python.pythonPath": "C:\\Users\\victo\\AppData\\Local\\Microsoft\\WindowsApps\\python.exe"
+    "python.pythonPath": "C:\\Users\\luizg\\AppData\\Local\\Programs\\Python\\Python38-32\\python.exe"
 }
